<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_bills"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/bill_filter_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp">

        <RadioButton
            android:id="@+id/filter_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_all"
            android:checked="true"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/filter_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_paid"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/filter_unpaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unpaid" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bill_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:clipToPadding="false"/>

    <include layout="@layout/layout_empty_state" />

</LinearLayout>